fix: set tailwind dark mode variant

--- a/packages/frontend/src/app.css
+++ b/packages/frontend/src/app.css
@@ -1,6 +1,8 @@
 @import 'tailwindcss';
 @plugin "@tailwindcss/typography";
 
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+
 @theme {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -83,7 +85,6 @@
   --base-container: calc(1536rem / 16);
 }
 
-.dark,
 [data-theme='dark'] {
   color-scheme: dark;
 
